# rheomesh

./: .tool-versions  README.md  compose.data.yaml  compose.yaml
.github/workflows/: build.yml  docs.yml  e2e.yml  release.yml
client/: README.md  package.json
client/example/camera/: package.json
client/example/camera/src/pages/: index.tsx  room.tsx
client/example/data/: package.json
client/example/data/src/: connection.ts
client/example/media/: package.json
client/example/media/src/: connection.ts
client/example/multiple/: package.json
client/example/multiple/src/pages/: room.tsx
client/example/whip/: package.json
client/example/whip/src/pages/: index.tsx  room.tsx
client/rheomesh/: package.json  tsconfig.json
client/rheomesh/src/: config.ts  index.ts  publishTransport.ts  publisher.ts  subscribeTransport.ts  subscriber.ts
client/rheomesh/tests/: publishTransport.spec.ts
docs/: Gemfile  _config.yml  compose.yml  index.markdown
docs/_others/: examples.md
docs/_pages/: 00_architecture.md  01_installation.md  02_getting_started.md  03_relay.md  04_recording.md  05_WHIP.md  architecture.md  getting_started.md
docs/_posts/: 2025-06-24-welcome-to-jekyll.markdown
e2e/: .gitignore  README.md  package.json  playwright.config.ts
e2e/src/: camera.spec.ts  data.spec.ts  relay.spec.ts  relay_data.spec.ts  screen.spec.ts
sfu/: Cargo.toml  README.md
sfu/examples/: data_relay_server.rs  data_server.rs  media_server.rs  relay_server.rs  whip_server.rs
sfu/examples/common/: mod.rs  redis.rs  room.rs
sfu/src/: config.rs  data_channel.rs  data_publisher.rs  data_subscriber.rs  dependency_descriptor.rs  error.rs  lib.rs  local_track.rs  prober.rs  publish_transport.rs  publisher.rs  recording_transport.rs  replay_channel.rs  router.rs  subscribe_transport.rs  subscriber.rs  track.rs  transport.rs  worker.rs
sfu/src/recording/: mod.rs  recording_track.rs  recording_transport.rs
sfu/src/relay/: data.rs  mod.rs  receiver.rs  relayed_data_publisher.rs  relayed_publisher.rs  relayed_track.rs  sender.rs
sfu/src/rtp/: dependency_descriptor.rs  layer.rs  mod.rs
sfu/src/signaling/: etag.rs  mod.rs  parser.rs  sdp_session.rs  whip.rs
sfu/src/utils/: ports.rs
