[package]
name = "rheomesh"
version = "0.7.1"
edition = "2021"
authors = ["Akira Fukushima <h3.poteto@gmail.com>"]
description = "WebRTC SFU server-side library for Rust."
license = "Apache-2.0"
repository = "https://github.com/h3poteto/rheomesh"
homepage = "https://github.com/h3poteto/rheomesh"

[package.metadata.docs.rs]
all-features = true

rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
whip = ["dep:actix-web"]

[dependencies]
bincode = { version = "3.0.0", features = ["serde"]}
bitvec = "1.0"
bytes = "1.9"
derivative = "2.2"
enclose = "1.2"
local-ip-address = "0.6.5"
openport = { version = "0.1.1", features = ["rand"] }
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"]}
strum_macros = "0.27"
thiserror = "1.0"
tokio = "1.38"
tracing = "0.1"
uuid = { version = "1.8", features = ["v4"] }
webrtc = "0.14.0"
webrtc-ice = "0.14.0"
webrtc-sdp = "0.3.13"
webrtc-srtp = "0.16.0"
webrtc-util = "0.12.0"
actix-web = { version = "4.9", optional = true }
async-trait = "0.1.89"
nom = "8.0.0"

[dev-dependencies]
redis = { version = "0.32", features = ["aio", "tokio-comp"] }
actix = "0.13"
actix-web = "4.9"
actix-web-actors = "4.3"
actix-cors = "0.7"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures-util = "0.3.31"
tokio-util = "0.7"

[[example]]
name = "whip_server"
path = "examples/whip_server.rs"
required-features = ["whip"]
